syntax = "proto3";
package protobuf;
option go_package = "protobuf";

// Request 请求结构
message SetTokenRequest {
    //调用注册方法时需要携带的参数
    string name = 1;
    string Token = 2;
}

// Response 响应结构
message SetTokenResponse {
    int32 recode =1;
    string message = 2;
}
service SetTokenService{
    // Register 测试方法
    rpc SetToken(SetTokenRequest) returns (SetTokenResponse) {};
}